# avclogistics

./: README.md
devel/: _setup_util.py  setup.sh
devel/lib/pkgconfig/: bot_definition.pc  chaosbot_definition.pc
devel/share/bot_definition/cmake/: bot_definitionConfig.cmake
devel/share/chaosbot_definition/cmake/: chaosbot_definitionConfig.cmake
hardwaretests/: solotest.py
remotecontrol/devel/share/detect_field/: _setup_util.py  setup.sh
remotecontrol/devel/share/detect_field/include/detect_field/: Clockstart.h  RedLineSight.h  StartLookingForClockstart.h  StartLookingForClockstartRequest.h  StartLookingForClockstartResponse.h
remotecontrol/devel/share/detect_field/lib/pkgconfig/: detect_field.pc
remotecontrol/devel/share/detect_field/lib/python2.7/dist-packages/detect_field/msg/: _Clockstart.py  _RedLineSight.py  __init__.py
remotecontrol/devel/share/detect_field/share/detect_field/: detect_field.launch  detect_field_noscreen.launch  detect_field_remotely.launch  detect_field_screensonly.launch
remotecontrol/devel/share/detect_field/share/detect_field/cmake/: detect_field-msg-extras.cmake  detect_field-msg-paths.cmake  detect_fieldConfig.cmake
remotecontrol/devel/share/detect_field/share/roseus/ros/detect_field/: manifest.l
remotecontrol/src/detect_field/: CMakeLists.txt  package.xml
remotecontrol/src/detect_field/msg/: Clockstart.msg  RedLineSight.msg  StartLooking.msg
remotecontrol/src/detect_field/scripts/: detect_clockstart.py  detect_redlines.py  joystick_inputs.py  listen_forClockStart.py  saw_startsignal.py
remotecontrol/src/detect_field/srv/: StartLookingForClockstart.srv
src/autonomous_controller/: CMakeLists.txt  package.xml
src/autonomous_controller/launch/: autonomous_controller.launch
src/autonomous_controller/msg/: AutonomousState.msg
src/autonomous_controller/scripts/: setautonomousgoal.py  setautonomousmode.py
src/autonomous_controller/srv/: SetAutonomousGoal.srv  SetAutonomousMode.srv
src/autonomous_start/: CMakeLists.txt  package.xml
src/autonomous_start/launch/: autonomous_start.launch  autonomous_start_UPBoardVisual.launch
src/autonomous_start/msg/: Clockstart.msg
src/autonomous_start/scripts/: autostart.py
src/autonomous_start/tf_files/: trainedsigns_labels.txt
src/chaosbot/bot_definition/: CMakeLists.txt  package.xml
src/chaosbot/bot_definition/launch/: chaosbot.rviz  chaosbot_rviz.launch
src/chaosbot/bot_definition/urdf/: chaosbot.gazebo  chaosbot.xacro
src/chaosbot/chaosbot_control/: package.xml
src/chaosbot/chaosbot_control/launch/: chaosbot_control.launch  chaosbot_rqt.perspective
src/chaosbot/chaosbot_description/: CMakeLists.txt  package.xml
src/chaosbot/chaosbot_description/launch/: chaosbot.rviz
src/chaosbot/chaosbot_gazebo/: CMakeLists.txt
src/chaosbot/chaosbot_gazebo/launch/: chaosbot_world.launch
src/chaosbot/chaosbot_msgs/: CMakeLists.txt  package.xml
src/chaosbot/chaosbot_msgs/msg/: Control.msg
src/chaosbot/chaosbot_teleop/: CMakeLists.txt  package.xml
src/chaosbot/chaosbot_teleop/launch/: chaosbot_teleop.launch
src/chaosbot/chaosbot_teleop/scripts/: joystick_translator.py
src/chaosbot/i2cpwm_board/launch/: i2cpwm_motorconfig.notes  i2cpwm_motorconfig.sh
src/chaosbot_control/: CMakeLists.txt
src/chaosbot_control/config/: chaosbot_control.yaml
src/chaosbot_control/launch/: chaosbot_rqt.launch
src/chaosbot_description/: CMakeLists.txt
src/chaosbot_description/launch/: chaosbot_rviz.launch
src/chaosbot_description/urdf/: chaosbot.gazebo  chaosbot.xacro  materials.xacro
src/chaosbot_gazebo/: package.xml
src/chaosbot_gazebo/worlds/: chaosbot.world
src/chaosbot_remote/chaosbot_mininputs/: CMakeLists.txt  package.xml
src/chaosbot_remote/chaosbot_mininputs/launch/: chaosbot_mininputs.launch
src/chaosbot_teleop/: CMakeLists.txt  package.xml
src/chaosbot_teleop/launch/: chaosbot_teleop.launch
src/chaosbot_teleop/scripts/: joystick_translator.py
src/i2cpwm_board/launch/: i2cpwm_motorconfig.notes  i2cpwm_motorconfig.sh
urdf/: avcrobot.urdf
(+20 files in other folders)
