<?xml version="1.0"?>
<package>
  <name>autonomous_start</name>
  <version>0.0.0</version>
  <description>Runs autonomously to detect start signal and move past startline.</description>

  <maintainer email="jeanette@techno-chaos.com">Jeanette Breton</maintainer>
  <license>BSD</license>
  <url type="website">https://techno-chaos.com</url> 
  <author email="jeanette@techno-chaos.com">Jeanette Breton</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>autonomous_controller</build_depend>



  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>autonomous_controller</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
