<package format="2">
  <name>chaosbot_msgs</name>
  <version>0.0.1</version>
  <description>
  Messages for controlling chaosbot hardware
  </description>
  <maintainer email="jeanette@techno-chaos.com">Jeanette Breton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

</package>
